# temp_docs

./: README.md
AI/: README.md
AI/ai_dev/: README.md  pyproject.toml  requirements.txt
AI/ai_dev/1.basic/: main.py
AI/ai_dev/2.history_awareness/: conversation.json  main.py
AI/ai_dev/3.retrieval/: main.py
AI/ai_dev/4.vector_db/: main.py  state_of_union.txt
AI/prompt_engineering/: .zshrc.swp  README.md  pyproject.toml  test.py
AI/prompt_engineering/1.practice/: main.py
AI/prompt_engineering/2.prompt_template/: main.py  prompt_template.txt
AI/prompt_engineering/3.prompt_chaining/: 2_outline.txt  3_plot.txt
PyHwp/: README.md  py_hwp.py  py_hwp.yaml  pyproject.toml  requirements.txt  run.py
PyHwp/config/: __init__.py  config.py  configurer.py
PyHwp/etc/: 여름휴가 안내문.hwp  자격 및 기술진.hwp
PyHwp/util/: __init__.py  abs_path.py  capitalize_first_letter.py  genpy_kill.py
PyHwpServer/: README.md  app.py  kafka-starter.bat  main.py  py_hwp.yaml  pyproject.toml  requirements.txt  starter.bat  test.py  test.txt
PyHwpServer/config/: config.py  configurer.py
PyHwpServer/etc/: result_여름 휴가 안내문.hwp  여름 휴가 안내문.hwp
PyHwpServer/kafka/logs/: server.log.2024-09-24-18  server.log.2024-09-25-08  server.log.2024-09-25-09  server.log.2024-09-25-18
PyHwpServer/pyhwp/: __init__.py  py_hwp.py
PyHwpServer/server/core/: __init__.py  coinitializer.py  event_loop.py  producer.py
PyHwpServer/server/data/: storage.py
PyHwpServer/server/deserializer/: __init__.py  deserializer.py
PyHwpServer/util/: __init__.py  genpy_kill.py  interval.py  small_utils.py
